@@ -933,10 +933,10 @@ del pointMutator.__init__
 pointMutator.__init__ = new_pointMutator
 
 
-def new_migrator(self, rate, fromSubPop=[], toSubPop=[], *args, **kwargs):
+def new_migrator(self, rate, fromSubPop=[], toSubPop=[], maleRatio=[], *args, **kwargs):
     # parameter rate
     r = rate
-    if type(rate) in    [types.IntType, types.LongType, types.FloatType]:
+    if type(rate) in [types.IntType, types.LongType, types.FloatType]:
         r = [[rate]]
     # if a single vector, [a,b] ==> [[a,b]]
     if type(rate) in [types.ListType, types.TupleType, types.FloatType]:
@@ -950,17 +950,46 @@ def new_migrator(self, rate, fromSubPop=[], toSubPop=[], *args, **kwargs):
     else:
         fs = fromSubPop
     # parameter toSubPop
-    if type(toSubPop) in    [types.IntType, types.LongType]:
+    if type(toSubPop) in [types.IntType, types.LongType]:
         ts = [toSubPop]
     else:
         ts = toSubPop
+    # parameter maleRatio
+    if type(maleRatio) in [types.IntType, types.LongType, types.FloatType]:
+        mr = [[maleRatio]*len(r[0])]*len(r)
+    else:
+        mr = maleRatio
     cppModule.migrator_swiginit(self,
-        cppModule.new_migrator(rate=r, fromSubPop=fs, toSubPop=ts, *args, **kwargs))
+        cppModule.new_migrator(rate=r, fromSubPop=fs, toSubPop=ts, maleRatio=mr, 
+			*args, **kwargs))
 
 new_migrator.__doc__ = migrator.__init__.__doc__
 del migrator.__init__
 migrator.__init__ = new_migrator
 
+
+def new_pyMigrator(self, fromSubPop=[], toSubPop=[], maleRatio=[], *args, **kwargs):
+    # parameter fromSubPop
+    if type(fromSubPop) in [types.IntType, types.LongType]:
+        fs = [fromSubPop]
+    else:
+        fs = fromSubPop
+    # parameter toSubPop
+    if type(toSubPop) in [types.IntType, types.LongType]:
+        ts = [toSubPop]
+    else:
+        ts = toSubPop
+    # parameter maleRatio
+    if type(maleRatio) in [types.IntType, types.LongType, types.FloatType]:
+        mr = [[maleRatio]*len(r[0])]*len(r)
+    else:
+        mr = maleRatio
+    cppModule.pyMigrator_swiginit(self,
+        cppModule.new_pyMigrator(fromSubPop=fs, toSubPop=ts, maleRatio=mr, *args, **kwargs))
+
+new_pyMigrator.__doc__ = pyMigrator.__init__.__doc__
+del pyMigrator.__init__
+pyMigrator.__init__ = new_pyMigrator
 
 
 def new_recombinator(self, intensity=-1, rate=[],
